--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.31.0",
+        "bootstrap": "^4.5.3",
         "core-js": "^3.0.0",
+        "jquery": "^3.5.1",
+        "owl.carousel": "^2.3.4",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "9.0.1",
         "webpack-notifier": "^1.6.0"
